# rag-speech-chat

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.build.yaml  docker-compose.build.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd-pipeline.yml
data/: .gitignore  chroma.dvc  docs.dvc
frontend/: index.html  script.js
rag_speech_chat/: app.py  gen_embedding.py  rag_agent.py  utils.py
static/: index.html
static/assets/css/: styles.css
static/assets/js/: script.js
test/: component_test.py  unit_test.py
